--- a/HTML_Introduction/006_Details_summary.html
+++ b/HTML_Introduction/006_Details_summary.html
@@ -12,7 +12,9 @@
     <!--Для того, чтобы список отображался в развернутом состоянии необходимо добавить атрибут open-->
     <details>
         <summary>Предстоящие обсуждения</summary>
-        <р>В новому году у нас появится огромное количество статей</р>
+        <p>
+            В новому году у нас появится огромное количество статей
+        </p>
         <ul>
             <li>Понимание структуры HTML документа</li>
             <li>Когда использовать <code>group</code></li>
