--- a/Audio_video/06_AudioElement.html
+++ b/Audio_video/06_AudioElement.html
@@ -6,9 +6,9 @@
 <body>
 
     <video control loop poster="poster.png">
-        <source src="video/video.mp4" />
-        <source src="video/video.ogg" />
-        <source src="video/video.webm" />
+        <source src="vsvideo.mp4" />
+        <source src="vsvideo.ogg" />
+        <source src="vsvideo.webm" />
     </video>
 
     <ul>
