--- a/Audio_video/07_AudioElement.html
+++ b/Audio_video/07_AudioElement.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <video id="video" style="border: 2px solid gray; cursor: pointer;">
-        <source src="video/video.mp4" />
-        <source src="video/vs video.ogg" />
-        <source src="video/video.webm" />
+        <source src="vsvideo.mp4" />
+        <source src="vsvideo.ogg" />
+        <source src="vsvideo.webm" />
     </video>
 
     <script>
