--- a/Audio_video/08_AudioElement.html
+++ b/Audio_video/08_AudioElement.html
@@ -9,9 +9,9 @@
     <br />
 
     <video id="orig Video" width="640" height="360" style="border: 1px solid grey">
-        <source src="video/video.mp4" />
-        <source src="video/vs video.ogg" />
-        <source src="video/video.webm" />
+        <source src="vsvideo.mp4" />
+        <source src="vsvideo.ogg" />
+        <source src="vsvideo.webm" />
     </video>
 
     <br />
