--- a/Audio_video/03_AudioElement.html
+++ b/Audio_video/03_AudioElement.html
@@ -10,8 +10,8 @@
         <!-- Указание файлов, которые будут использоваться для воспроизведения браузером.
             Браузер начнет воспроизводить первый файл, формат которого поддерживает.
         -->
-        <source src="audio/Vivaldi.mp3">
-        <source src="audio/Vivaldi.ogg">
+        <source src="Vivaldi (1).mp3">
+        <source src="Vivaldi.ogg">
         <a href=" http://html5accessibility.com/ ">Браузер не поддерживает воспроизведение звуковых медиафайлов</a>
     </audio>
 </body>
